Style: Fix extra padding below pricebox

--- a/src/global/styles/global.css
+++ b/src/global/styles/global.css
@@ -31,5 +31,8 @@ body {
 
 .layout__wrapper {
 	position: relative;
+}
+
+section {
 	padding-bottom: 3rem;
 }
